avance con las rutas

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -15,6 +15,12 @@
 		<label for='status'>Status</label>
 		<input type='text' name='status' required />
 
+		<label for='category'>category</label>
+		<input type='text' name='category' required />
+
+		<label for='thumbnail'>thumbnail</label>
+		<input type='text' name='thumbnail' required />
+
 		<label for='code'>Code</label>
 		<input type='text' name='code' required />
 
@@ -25,4 +31,5 @@
 	</form>
 
 	<div id='contenedorProductos'></div>
+
 </main>
