--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -15,6 +15,9 @@
         integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
         crossorigin="anonymous">
     </script>
+
+    <script> let cid="{{cid}}" </script>
+
     <script src="js/{{rutaJS}}.js"></script>
 </body>
 </html>
