vistas casi terminadas

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -16,8 +16,13 @@
         crossorigin="anonymous">
     </script>
 
-    <script> let cid="{{cid}}" </script>
+    <script> 
+        let cid="{{cid}}"
+        let session={{session}}
+    </script>
 
     <script src="js/{{rutaJS}}.js"></script>
+    
+    
 </body>
 </html>
