--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,10 +1,77 @@
+body {
+    font-family: Arial, sans-serif;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f4f4f4;
+}
+
+.game-card {
+    width: 300px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.game-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.game-card .title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.game-card .description {
+    font-size: 16px;
+    color: #777;
+    margin-bottom: 10px;
+}
+
+.game-card .price {
+    font-size: 20px;
+    font-weight: bold;
+    color: #2ecc71;
+    margin-bottom: 10px;
+}
+
+.game-card .status {
+    font-size: 16px;
+    color: #2ecc71;
+    margin-bottom: 10px;
+}
+
+.game-card .code, .game-card .stock, .game-card .category {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 5px;
+}
+
 #contenedorProductos{
     display: flex;
-    flex-direction: column;
+    gap: 50px;
+    margin-bottom: 50px;
     
 }
 
 .contenedorProducto{
     color: black;
     font-size: 20px;
+}
+
+.logoutButton{
+    background-color: red;
+    color: whitesmoke;
+    padding: 10px;
+    font-size: 15px;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
 }
