--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -19,6 +19,7 @@
     <script> 
         let cid="{{cid}}"
         let session={{session}}
+        let nombre = "{{nombre}}"
     </script>
 
     <script src="js/{{rutaJS}}.js"></script>
