Desafio refactor a nuestro login

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,8 +18,8 @@
 
     <script> 
         let cid="{{cid}}"
-        let session={{session}}
-        let nombre = "{{nombre}}"
+        let session={{session}} || null
+        let nombre = "{{nombre}}" || null
     </script>
 
     <script src="js/{{rutaJS}}.js"></script>
