--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -127,7 +127,7 @@
             respuesta.innerHTML=`${response.mensaje}`
 
             if(response.mensaje=="Usuario creado"){
-                window.location.href = "http://localhost:4000/static"
+                window.location.href = "http://localhost:4000/static/"
             }
         })
 
