--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,59 +1,58 @@
 <style>
     body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        gap: 30px;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
 
-nav{
-    margin-bottom: 50px;
-}
+    nav {
+        margin-bottom: 50px;
+    }
 
-.container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+    .container {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-h1 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    text-align: center;
-}
+    h1 {
+        margin-bottom: 20px;
+        font-size: 24px;
+        text-align: center;
+    }
 
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
+    label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+    }
 
-input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+    input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
 
-#submitButton {
-    width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-}
+    #submitButton {
+        width: 100%;
+        padding: 10px;
+        background-color: #28a745;
+        border: none;
+        border-radius: 4px;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+    }
 
-button:hover {
-    background-color: #218838;
-}
-
+    button:hover {
+        background-color: #218838;
+    }
 </style>
 
 <div class="container">
@@ -78,21 +77,29 @@ button:hover {
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
 
-        fetch('http://localhost:4000/api/sessions/login', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded',
-            },
-            body: new URLSearchParams({ email, password }),
-        })
-            .then(response => {
-                if (response.status === 200) {
-                    window.location.href = response.url;
-                } else {
-                    return response.json();
-                }
+        try {
+            fetch('http://localhost:4000/api/sessions/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: new URLSearchParams({ email, password }),
             })
-            .catch(error => console.log(error))
+                .then(response => {
+                    response.json();
+                    if (response.status == 200) {
+                        console.log("estoy en el login handlebars");
+                        window.location.href = "http://localhost:4000/static/";
+                    } else {
+                        console.log("estoy en el else del login handlebars");
+                        return console.log(response);
+                    }
+                })
+                .catch(error => console.log(error))
+        }
+        catch (error) {
+            console.log(error);
+        }
     });
 
 </script>
