Se aplicaron capas, controlador, vistas y rutas

--- a/src/views/cargarJuegosForm.handlebars
+++ b/src/views/cargarJuegosForm.handlebars
@@ -30,6 +30,6 @@
 		<button type='submit'>Crear Producto</button>
 	</form>
 
-	<div id='contenedorProductos'></div>
+	<div id='productoCreado'></div>
 
 </main>
