--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -79,10 +79,6 @@
             <input type="password" id="password" name="password" required>
         </div>
         <div>
-            <label for="rol">rol:</label>
-            <input type="text" id="rol" name="rol" required>
-        </div>
-        <div>
             <label for="age">age:</label>
             <input type="text" id="age" name="age" required>
         </div>
@@ -110,7 +106,6 @@
         const last_name = document.getElementById("last_name").value
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
-        const rol = document.getElementById('rol').value;
         const age = document.getElementById('age').value;
 
         fetch("http://localhost:4000/api/users/register",{
@@ -118,7 +113,7 @@
             headers: {
                 'Content-Type': 'application/x-www-form-urlencoded',
             },
-            body: new URLSearchParams({ email, password, first_name, last_name, rol, age})
+            body: new URLSearchParams({ email, password, first_name, last_name, age})
         })
         .then(response=> response.json())
         .then(response=>{
