--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -1,11 +1,22 @@
-nav{
+*{
+    box-sizing: border-box;
+}
+
+.contenedorNav{
     display: flex;
-    gap: 20px;   
+    max-width: 100%;
+    width: 100%;
+    background-color: rgb(28, 194, 194);
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap: 40px;
 }
 
 a{
-    color: blue;
+    color: black;
     text-decoration: none;
     text-transform: none;
+    font-family: roboto-regular;
     font-size: 25px;
 }
