--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,21 +1,19 @@
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        gap: 30px;
-        justify-content: center;
+    .mainLogin {
+        background-color: rgb(228, 195, 146);
+        display: flex;
+        flex-direction: column;
         align-items: center;
-        height: 100vh;
-    }
-
-    nav {
-        margin-bottom: 50px;
+        justify-content: center;
+        min-height: 95vh;
     }
 
     .container {
         background-color: #fff;
+        max-width: 50%;
+        width: 30%;
         padding: 20px;
-        border-radius: 5px;
+        border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -50,27 +48,68 @@
         cursor: pointer;
     }
 
+    #github {
+        width: 100%;
+        padding: 10px;
+        background-color: black;
+        border: none;
+        border-radius: 4px;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+        margin-bottom: 16px;
+    }
+
+    #botonRegistrarse {
+        width: 100%;
+        padding: 10px;
+        background-color: #e90f0f;
+        border: none;
+        border-radius: 4px;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
     button:hover {
         background-color: #218838;
     }
+
+    .errorInicioSesion {
+        color: red;
+        font-size: 17px;
+        text-align: center;
+    }
 </style>
 
-<div class="container">
-    <h1>Iniciar Sesión</h1>
-    <form id="loginForm">
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <button type="button" id="submitButton">Iniciar sesión</button>
-    </form>
-</div>
+<main class="mainLogin">
+    <div class="container">
+        <h1>Iniciar Sesión</h1>
+        <form id="loginForm">
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="button" id="submitButton">Iniciar sesión</button>
+        </form>
+        <button type="button" id="github">Iniciar sesion con Github</button>
+        <button id="botonRegistrarse">¿No tenes cuenta? Registrate</button>
+    </div>
+</main>
 
 <script>
+
+    document.getElementById('github').addEventListener('click', function () {
+        window.location.href = "http://localhost:4000/api/sessions/githubSession";
+    })
+
+    document.getElementById('botonRegistrarse').addEventListener('click', function () {
+        window.location.href = "http://localhost:4000/api/users/register";
+    });
 
     document.getElementById('submitButton').addEventListener('click', function () {
         const email = document.getElementById('email').value;
@@ -82,20 +121,22 @@
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
                 },
-                body: new URLSearchParams({ email, password }),
+                body: new URLSearchParams({ email, password })
             })
-            .then(response => response.json())
-            .then(response => {
-                console.log(response.status);
-                if (response.status == 200) {
-                    //console.log("estoy en el login handlebars");
-                    window.location.href = "http://localhost:4000/static/";
-                } else {
-                    //console.log("estoy en el else del login handlebars");
-                    return console.log(response.mensaje);
-                }
-            })
-            .catch(error => console.log(error))
+                .then(response => response.json())
+                .then(response => {
+                    console.log(response.status);
+                    if (response.status == 200) {
+                        //console.log("estoy en el login handlebars");
+                        window.location.href = "http://localhost:4000/home/";
+                    } else {
+                        //console.log("estoy en el else del login handlebars");
+                        return console.log(response.mensaje);
+                    }
+                })
+                .catch(error => {
+                    document.getElementById('botonRegistrarse').parentElement.insertAdjacentHTML('beforeend', '<p class="errorInicioSesion">Usuario o contraseña incorrectos</p>')
+                })
         }
         catch (error) {
             console.log(error.message);
