--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -1,4 +1,4 @@
-<nav>
-    <a href="http://localhost:4000/static/">Inicio</a>
-    <a href="http://localhost:4000/static/cargarJuegosForm">Cargar producto</a>
+<nav class="contenedorNav">
+    <a href="http://localhost:4000/home/" class="inicio" id="inicio">INICIO</a>
+    <a href="http://localhost:4000/api/sessions/login" id="iniciarSesion" class="iniciarSesion">INICIAR SESIÓN</a>
 </nav>
