--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -190,7 +190,8 @@
         });
 
         function finalizarCompra() {
-            fetch(`http://localhost:4000/api/tickets/${cartId}/finalizarCompra`, {
+            fetch(`http://localhost:4000/api/carts/${cartId}/checkout`, {
+                method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 }
@@ -260,7 +261,7 @@
         function eliminarProducto() {
             const product = JSON.parse(this.dataset.product);
             const cartUser = JSON.parse(this.dataset.cartUser);
-            fetch(`http://localhost:4000/api/carts/${cartId}/products/${product._id}`, {
+            fetch(`http://localhost:4000/api/carts/${cartId}/product/${product._id}`, {
                 method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json'
