--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -167,7 +167,7 @@
       const logout = document.getElementById("logout")
 
       logout.addEventListener("click", () => {
-        fetch("http://localhost:4000/api/sessions/logout", {
+        fetch("http://localhost:4000/api/session/logout", {
           method: "GET",
           headers: {
             "Content-Type": "application/json",
@@ -210,7 +210,7 @@
       button.addEventListener('click', function () {
         const product = JSON.parse(this.dataset.product);
         const cartUser = this.dataset.cartUser;
-        if (cartUser) {
+        if (cartUser != 'false') {
           addToCart(product, cartUser);
         }
         else {
@@ -227,16 +227,12 @@
     });
 
     function addToCart(product, cartUser) {
-      const productoParaAgregar =
-        [{ idProd: product._id, quantity: 1 }]
-
-      if (cartUser) {
-        fetch(`http://localhost:4000/api/carts/${cartUser}`, {
-          method: 'PUT',
+      if (cartUser != 'false') {
+        fetch(`http://localhost:4000/api/carts/${cartUser}/product/${product._id}`, {
+          method: 'POST',
           headers: {
             'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ productosParaAgregar: productoParaAgregar })
+          }
         })
           .then(response => { response.json() })
           .then(data => {
